--- a/FRONT/DressCode2024/src/app/shared/components/header/header.component.html
+++ b/FRONT/DressCode2024/src/app/shared/components/header/header.component.html
@@ -1,14 +1,18 @@
 <header>
-    <div class="logo">
-        <img src="../../../../assets/img/logo.jpeg" alt="logo">
-    </div>   
-    <nav>
-        <ul>
-            <li><a href="./FRONT/pages/login.html"><img src="./FRONT/img/img_login/login-icon.png" alt=""></a></li>
-            <li><a href="./index.html">Inicio</a></li>
-            <li><a href="./FRONT/pages/productos.html">Productos</a></li>
-            <li><a href="./FRONT/pages/quienes_somos.html">Sobre Nosotros</a></li>
-        
-        </ul>
-    </nav>
+  <div class="logo">
+    <img src="../../../../assets/img/logo.jpeg" alt="logo" />
+  </div>
+  <nav>
+    <ul>
+      <li>
+        <a href="./FRONT/pages/login.html"
+          ><img src="./FRONT/img/img_login/login-icon.png" alt=""
+        /></a>
+      </li>
+      <li><a href="./index.html">Inicio</a></li>
+      <li><a href="./FRONT/pages/productos.html">Productos</a></li>
+      <li><a href="./FRONT/pages/quienes_somos.html">Sobre Nosotros</a></li>
+      <li><a href="#" routerLink="/pages">Contacto</a></li>
+    </ul>
+  </nav>
 </header>
