--- a/FRONT/DressCode2024/src/app/landing/landing.component.css
+++ b/FRONT/DressCode2024/src/app/landing/landing.component.css
@@ -143,7 +143,7 @@ nav a:active {
 }
 
 .libreta {
-    background-image: url("../../assets/img/img_landing/bolso\ 1.jpg");
+    background-image: url("../../assets/img/img_landing/reloj.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
