cambio ruteo de inicio a INDEX y agrego pagina 404 error

--- a/FRONT/DressCode2024/src/app/productos/productos.component.html
+++ b/FRONT/DressCode2024/src/app/productos/productos.component.html
@@ -1,8 +1,8 @@
 <h1>Nuestros productos</h1>
 
-<div class="container-sm">
+<div class="container-xxl">
     <div class="productos">
-        <div class="d-flex justify-content-between flex-wrap">
+        <div class="d-flex justify-content-center flex-wrap">
 
             <div class="card m-5 p-2" style="width: 18rem;">
                 <img src="../../assets/img/img_productos/remera_code.jpeg" class="card-img-top align-self-center imagen-producto" alt="remera code"  />
