--- a/FRONT/DressCode2024/src/app/shared/components/header/header.component.html
+++ b/FRONT/DressCode2024/src/app/shared/components/header/header.component.html
@@ -14,7 +14,7 @@
             <li><a routerLink="/index">Inicio</a></li>
             <li><a routerLink="/productos">Productos</a></li>
             <li><a routerLink="/mis-compras">Mis Compras</a></li>      
-            <li><a href="./FRONT/pages/quienes_somos.html">Sobre Nosotros</a></li>
+            <li><a routerLink="/index/11">Sobre Nosotros</a></li>
           <li><a routerLink="/Contacto">Contacto</a></li>
         
         </ul>
