hago cambios de los nombres en html de sobre-nosotros

--- a/FRONT/DressCode2024/src/app/sobre-nosotros/sobre-nosotros.component.html
+++ b/FRONT/DressCode2024/src/app/sobre-nosotros/sobre-nosotros.component.html
@@ -137,14 +137,14 @@
                 </div>
                 <div class="persona">
                     <img src="../../../assets/img/img_quienes_somos/avatar2.png" alt="Persona 6">
-                    <h4>Mateo</h4>
+                    <h4>Javier</h4>
                     
                     <i class="fa-brands fa-linkedin"></i>
                     <i class="fa-brands fa-github"></i>
                 </div>
                 <div class="persona">
                     <img src="../../../assets/img/img_quienes_somos/avatar5.png" alt="Persona 7">
-                    <h4>kiara</h4>
+                    <h4>Elizabeth</h4>
                     
                     
                     <i class="fa-brands fa-linkedin"></i>
