ordeno la estructura de carpetas, y pequeñas mejoras en diseño

--- a/FRONT/DressCode2024/src/app/shared/footer/footer.component.html
+++ b/FRONT/DressCode2024/src/app/shared/footer/footer.component.html
@@ -9,7 +9,7 @@
             <ul>
                 <li><i class="fa-solid fa-phone" style="color: #ffffff;"></i> 54933333333333</li>
                 <li><strong><i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i></strong> 0351 5555555555</li>
-                <li><i class="fa-regular fa-envelope" style="color: #ffffff;" ></i><i></i><p>infowolfsoul a gmail.com</p></li>
+                <li><i class="fa-regular fa-envelope" style="color: #ffffff;" ></i><p>infowolfsoul (a) gmail.com</p></li>
             </ul> <!-- Información de contacto -->
         </div>
         <div class="subscribe">
