--- a/FRONT/DressCode2024/src/app/pages/contacto/contacto.component.html
+++ b/FRONT/DressCode2024/src/app/pages/contacto/contacto.component.html
@@ -1,5 +1,5 @@
 <form>
-  <h2>CONTACTO</h2>
+  <h2>Contacto</h2>
   <input type="text" name="Nombre" placeholder="Nombre" />
   <input type="text" name="Apellido" placeholder="Apellido" />
   <input type="text" name="Correo" placeholder="Correo" />
