--- a/FRONT/DressCode2024/src/app/pages/registro/registro.component.html
+++ b/FRONT/DressCode2024/src/app/pages/registro/registro.component.html
@@ -55,11 +55,11 @@ style="
                   <p class="text-danger">El password requiere como mínimo 8 caracteres.</p>
              
                 }
-                @else if (Nombre?.hasError('maxlength'))
+                @else if (Password?.hasError('maxlength'))
                   {
                     <p class="text-danger">El password no debe exeder los 16 carácteres.</p>
                   }
-                @else if (Nombre?.hasError('pattern'))
+                @else if (Password?.hasError('pattern'))
                   {
                     <p class="text-danger">'La contraseña debe contener al menos un número, una letra mayúscula, una letra minúscula y un caracter no alfanumérico.</p>
                   }  
