Peticion http Post de registro a db json de prueba. Faltan mejoras

--- a/FRONT/DressCode2024/src/app/pages/productos/productos.component.html
+++ b/FRONT/DressCode2024/src/app/pages/productos/productos.component.html
@@ -5,12 +5,10 @@
         <div class="d-flex justify-content-center flex-wrap">
 
             <div class="card m-5 p-2" style="width: 18rem;">
-                <img src="../../assets/img/img_productos/remera_code.jpeg" class="card-img-top align-self-center imagen-producto" alt="remera code"  /> 
-
-                @for (producto of productos; track $index) {
-                    <div class="card-body" >
-                    <h5 class="card-title">Remera Code {{ producto.nombre }}</h5>
-                    <div class="accordion" id="accordion1" > {{producto.id}}
+                <img src="../../assets/img/img_productos/remera_code.jpeg" class="card-img-top align-self-center imagen-producto" alt="remera code"  />
+                    <div class="card-body">
+                    <h5 class="card-title">Remera Code</h5>
+                    <div class="accordion" id="accordion1">
                         <div class="accordion-item">
                         <h2 class="accordion-header">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
@@ -18,7 +16,7 @@
                             </button>
                         </h2>
                         <div id="collapse1" class="accordion-collapse collapse" data-bs-parent="#accordion1">
-                            <div class="accordion-body"> {{producto.descripcion}}
+                            <div class="accordion-body">
                                 Expresa tu amor por la programación con nuestra Camiseta "code" en letras verdes sobre negro!
 
                                     Esta camiseta es un homenaje a los apasionados de la codificación y la tecnología. Con un diseño sencillo pero poderoso, esta prenda te permite llevar tu pasión por el código a donde quiera que vayas.
@@ -30,10 +28,9 @@
                     </div>
                     <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
-                }
             </div>
 
-            <!-- <div class="card m-5 p-2" style="width: 18rem;">
+            <div class="card m-5 p-2" style="width: 18rem;">
                 <img src="../../assets/img/img_productos/pantalon_binario.jpeg" class="card-img-top align-self-center imagen-producto" alt="pantalon binario"/>
                     <div class="card-body">
                     <h5 class="card-title">Pantalon Binario</h5>
@@ -237,4 +234,4 @@
             </div>
         </div>
     </div>
-</div> -->
+</div>
