--- a/FRONT/DressCode2024/src/app/pages/registro/registro.component.html
+++ b/FRONT/DressCode2024/src/app/pages/registro/registro.component.html
@@ -1,4 +1,4 @@
-<div  class="bg-image"
+<!-- <div  class="bg-image"
 style="
   background-image: url('../../../assets/img/img_login/ropa-fondo-2.jpg');
   
@@ -91,4 +91,4 @@ style="
   </div>
 
 
-</div>
+</div> -->
