subo contenido html de carrito, y agrego icono en nav bar

--- a/FRONT/DressCode2024/src/app/shared/header/header.component.html
+++ b/FRONT/DressCode2024/src/app/shared/header/header.component.html
@@ -19,6 +19,7 @@
             <li><a routerLink="/mis-compras">Mis Compras</a></li>      
             <li><a routerLink="/sobre-nosotros">Sobre Nosotros</a></li>
           <li><a routerLink="/Contacto">Contacto</a></li>
+          <li><a routerLink="/carrito" ><img src="../../../assets/img/img_carrito/carrito_logo2.png" alt="imagen del login"></a></li>
         
         </ul>
     </nav>
