--- a/FRONT/DressCode2024/src/app/pages/productos/productos.component.html
+++ b/FRONT/DressCode2024/src/app/pages/productos/productos.component.html
@@ -11,10 +11,10 @@
 
                 
                     <div class="card-body" >
-                    <h5 class="card-title"> {{ producto.nombre }}</h5> 
+                    <h5 class="card-title"> {{ producto.nombre_producto }}</h5> 
 
                     <!-- card Remera Code -->
-                    <div class="accordion" id="accordion1" > {{producto.idproducto}}
+                    <div class="accordion" id="accordion1" >  Precio: ${{producto.precio}}
 
                         <div class="accordion-item">
                         <h2 class="accordion-header">
