--- a/FRONT/DressCode2024/src/app/shared/header/header.component.html
+++ b/FRONT/DressCode2024/src/app/shared/header/header.component.html
@@ -16,7 +16,7 @@
                 @if (estaAutenticado)
                     {
                         <li class="nav-item"><i class="fa-solid fa-arrow-right-from-bracket fa-lg" (click)="logOut()" style="color: #000000;"></i></li>
-                        <li class="nav-item"><a class="nav-link" routerLink="/mis-compras">Mis Compras</a></li>
+                        <li class="nav-item"><a class="nav-link" routerLink="/dashboard" class="text-black">Dashboard</a></li>
                     }
                 @else
                     {    
@@ -25,6 +25,7 @@
                     }
                 <li class="nav-item"><a class="nav-link" routerLink="/index">Inicio</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/productos">Productos</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/mis-compras">Mis Compras</a></li>      
                 <li class="nav-item"><a class="nav-link" routerLink="/sobre-nosotros">Sobre Nosotros</a></li>
                 <li class="nav-item"><a routerLink="/Contacto">Contacto</a></li>
                 <li class="nav-item"><a routerLink="/carrito" ><img src="../../../assets/img/img_carrito/carrito_logo2.png" alt="imagen del login"></a></li>
